--- a/productos.html
+++ b/productos.html
@@ -75,6 +75,7 @@
         <div class="producto">
             <div class="product-image" onclick="flipImage(this)">
                 <img class="front" src="imagenes/arroZ.jpg">
+                <span class="flip-icon">&#x27F3;</span>
                 <div class="back">
                     <p><br>Jabón exfoliante y blanqueador <br> de la piel. <br><br>
                         Ingredientes: <br>
