--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     </header>
 
     <nav class="navbar">
+        <button class="menu-toggle">☰</button>
         <ul class="nav-links">
-            <li><a href="productos.html">Productos</a></li>
+            <li><a href="productos.html">Jabon Solido</a></li>
+            <li><a href="cremas.html">Cremas</a></li>
             <li><a href="ingredientes.html">Jabónología</a></li>
             <!-- <li><a href="contacto.html">Contacto</a></li>   -->
         </ul>
