--- a/productos.html
+++ b/productos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
+    <title>Jabón Solido</title>
     <link rel="stylesheet" href="estilos.css">
     <link rel="icon" href="/imagenes/favicon-32x32.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,8 +20,10 @@
     </header>
 
     <nav class="navbar">
+        <button class="menu-toggle">☰</button>
         <ul class="nav-links">
             <li><a href="index.html">Inicio</a></li>
+            <li><a href="cremas.html">Cremas</a></li>
             <li><a href="ingredientes.html">Jabónología</a></li>
             <!-- <li><a href="contacto.html">Contacto</a></li> -->
         </ul>
@@ -95,6 +97,7 @@
         <div class="producto">   <!--13 - 21 -->
             <div class="product-image" onclick="flipImage(this)">
                 <img class="front" src="imagenes/mielj.jpg">
+                <span class="flip-icon">&#x27F3;</span>
                 <div class="back">
                     <p><br>Jabón exfoliante suave y nutritivo.<br> Para pieles sensibles. <br><br>
                         Ingredientes: <br>
@@ -114,6 +117,7 @@
         <div class="producto">
             <div class="product-image" onclick="flipImage(this)">
                 <img class="front" src="imagenes/carbon.jpg">
+                <span class="flip-icon">&#x27F3;</span>
                 <div class="back">
                     <p><br><br>Jabón ideal para pieles <br> grasas o con acné. <br><br>
                         Ingredientes: <br>
@@ -130,6 +134,7 @@
         <div class="producto">
             <div class="product-image" onclick="flipImage(this)">
                 <img class="front" src="imagenes/cafe-cocoa.jpg">
+                <span class="flip-icon">&#x27F3;</span>
                 <div class="back">
                     <p><br>Jabón que ofrece una doble acción: exfoliante y antioxidante. El café estimula la circulación
                         mientras que el cacao nutre e hidrata la piel.<br><br>
@@ -149,6 +154,7 @@
         <div class="producto">
             <div class="product-image" onclick="flipImage(this)">
                 <img class="front" src="imagenes/cafej.jpg">
+                <span class="flip-icon">&#x27F3;</span>
                 <div class="back">
                     <p><br>El jabón de café actúa como un exfoliante que elimina células muertas y mejora
                         la circulación.<br><br>
@@ -169,6 +175,7 @@
         <div class="producto">
             <div class="product-image" onclick="flipImage(this)">
                 <img class="front" src="imagenes/chocolate.jpg">
+                <span class="flip-icon">&#x27F3;</span>
                 <div class="back">
                     <p>Rico en antioxidantes, este jabón protege la piel del envejecimiento prematuro y la hidrata en
                         profundidad.<br><br><br>
@@ -187,6 +194,7 @@
         <div class="producto">
             <div class="product-image" onclick="flipImage(this)">
                 <img class="front" src="imagenes/jabonsabila.jpg">
+                <span class="flip-icon">&#x27F3;</span>
                 <div class="back">
                     <p>La sábila (aloe vera) es un poderoso regenerador cutáneo. <br>
                         Este jabón hidrata, calma irritaciones.<br><br>
@@ -205,6 +213,7 @@
         <div class="producto">
             <div class="product-image" onclick="flipImage(this)">
                 <img class="front" src="imagenes/oceano.jpg">
+                <span class="flip-icon">&#x27F3;</span>
                 <div class="back">
                     <p><br> Frescura del mar, proporcionante de frescura y limpieza. <br>
                         Adicionado con pachulí que aporta propiedades regeneradoras.<br><br>
@@ -223,6 +232,7 @@
         <div class="producto">
             <div class="product-image" onclick="flipImage(this)">
                 <img class="front" src="imagenes/lavanda.jpg">
+                <span class="flip-icon">&#x27F3;</span>
                 <div class="back">
                     <p>El jabón de lavanda es ideal para relajar la piel y la mente. <br> Contiene propiedades calmantes
                         y regeneradoras, perfectas para pieles sensibles o con irritaciones.<br>
@@ -242,6 +252,7 @@
         <div class="producto">
             <div class="product-image" onclick="flipImage(this)">
                 <img class="front" src="imagenes/rosa-betabel.jpg">
+                <span class="flip-icon">&#x27F3;</span>
                 <div class="back">
                     <p>Este jabón ayuda a reducir manchas, líneas
                         de expresión y estrías, hidratada y con un tono más uniforme y radiente. <br>
