--- a/ingredientes.html
+++ b/ingredientes.html
@@ -20,9 +20,11 @@
     </header>
 
     <nav class="navbar">
+        <button class="menu-toggle">☰</button>
         <ul class="nav-links">
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="productos.html">Productos</a></li>
+            <li><a href="productos.html">Jabón Solido</a></li>
+            <li><a href="cremas.html">Cremas</a></li>
             <!-- <li><a href="contacto.html">Contacto</a></li> -->
         </ul>
     </nav>
